# petrol-price-aggregator

./: .pre-commit-config.yaml  README.md  pyproject.toml
aggregator/: alembic.ini  config.py  security.py  utils.py
aggregator/alembic/: env.py  script.py.mako
aggregator/alembic/versions/: 59b1e6667ede_initial_migration.py
aggregator/database/: models.py
aggregator/schema/: __init__.py  fuel.py  station.py  stations.py
